Fixed the footer icon wrapping

--- a/src/app/layout/footer/footer.component.scss
+++ b/src/app/layout/footer/footer.component.scss
@@ -150,3 +150,10 @@ a:focus {
   color: inherit !important;
   background-color: inherit !important;
 }
+
+@media (max-width: 380px) {
+  .logo {
+     width: 200px;
+     justify-content: center;
+  }
+} 
